Bug 1264110 - Fix timing issue in test cases. r=kershaw, a=ritu

MozReview-Commit-ID: 2Ia4L7EizrA